--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "better-scroll": "^2.0.0-beta.10",
     "immutable": "^4.0.0",
     "lib-flexible": "^0.3.2",
