--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lib-flexible": "^0.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
